...
    tools:context=".GameActivity"
    tools:showIn="@layout/activity_game">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
...
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp">

                <Button
                    android:id="@+id/btnMap"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jugar"
                    android:background="@drawable/btn_inicio_shape"
                    android:textColor="#FFFFFF"
...
