...

    </LinearLayout>

</LinearLayout>
    
<Button
    android:id="@+id/btn_observar"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:text="Observar"
    android:textColor="@color/Blanco"
    android:layout_marginTop="25dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/buttonstyle" />

</LinearLayout>
