...
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/stop"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/zoom_in"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/zoom_in"
                android:layout_marginBottom="10dp"/>

...
                android:id="@+id/pausa"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/pausa" />

            <Button
                android:id="@+id/zoom_out"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/zoom_out"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
...
